remember html 1 more

--- a/9ImageAndPicture.html
+++ b/9ImageAndPicture.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>imageandpicture</title>
 </head>
 <body>
+    <img src="img/friends.png" alt="friends" style="width: 100px; height: 100px;">
     
+    <br>
+
+    <!--Image Map-->
+
+    <img src="https://www.w3schools.com/html/workplace.jpg" alt="bilgisayar" usemap="#pc1" >
+    <map name="pc1">
+        <area shape="rect" coords="32,41,275,349" href="bilgisayar" alt="http://www.google.com">
+    </map>
 </body>
 </html>
