--- a/5alinti.html
+++ b/5alinti.html
@@ -17,7 +17,7 @@
 
     <p style="background-color: rgb(120, 55, 85);">James Cameron'un filmi <cite>Avatar Suyun Yolu </cite> çok izlendi.</p>
 
-    <!--Bu bdo etiketi yazının türünü değiştirir.-->
+    <!--Bu bdo etiketi yazının türünü değiştirir.Right to left formatında verir.-->
     <bdo dir="rtl">bu normal bir yazı degil.</bdo>
 </body>
 </html>
